--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "docker-demo-app",
   "version": "1.0.0",
-  "description": "same app for docker training",
+  "description": "sample app for docker training",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "shawn hartsell",
   "license": "ISC",
