--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start-prod": "node index.js"
+    "start": "node index.js"
   },
   "author": "shawn hartsell",
   "license": "ISC",
@@ -18,7 +17,6 @@
     "lodash": "^4.13.1",
     "mustache-express": "^1.2.2",
     "nedb": "^1.8.0",
-    "pg": "^6.0.0",
-    "sequelize": "^3.23.4"
+    "pg": "^6.0.0"
   }
 }
