adding volume mount and override command to the docker compose file. added shell script to run the todo app under node-supervisor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
       context: ./db/pg
   app:
     build: .
+    command: sh ./dev-start-app.sh
+    volumes:
+        - .:/app
     container_name: todo-app
     environment:
       PGHOST: db
